--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,11 +1,9 @@
 // 主要颜色配置
 $main-color: #3278F8; // 主色 按钮及文字
-$bg-color: #F7F7F7; // 大背景色 输入框背景色 元素节点间距背景色
+$bg-color: #ffffff; // 大背景色 输入框背景色 元素节点间距背景色
 $active-color: #0C64EB; // 点击 选中
 $hover-color: rgba(41, 140, 248, 0.1); // 悬浮背景色
 $warning-color: #F5BB4A; // 预警
 $error-color: #FF5D5D; // 错误、报警
 $border-color: #E7E9ED; // 边框、分割线
 $disable-color: #E7E8E9; // 禁用、不可点击
-
-// 常用样式
