fix: 图片转为内部引用

--- a/src/assets/styles/font.scss
+++ b/src/assets/styles/font.scss
@@ -1,11 +1,8 @@
 @font-face {
-  font-family: 'font_family';  /* project id 2133374 */
-  src: url('//at.alicdn.com/t/font_2133374_v8v0zpfe3sd.eot');
-  src: url('//at.alicdn.com/t/font_2133374_v8v0zpfe3sd.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_2133374_v8v0zpfe3sd.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_2133374_v8v0zpfe3sd.woff') format('woff'),
-  url('//at.alicdn.com/t/font_2133374_v8v0zpfe3sd.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_2133374_v8v0zpfe3sd.svg#font_family') format('svg');
+  font-family: 'iconfont';  /* Project id 1973738 */
+  src: url('//at.alicdn.com/t/font_1973738_jf5ishinnam.woff2?t=1625716248005') format('woff2'),
+       url('//at.alicdn.com/t/font_1973738_jf5ishinnam.woff?t=1625716248005') format('woff'),
+       url('//at.alicdn.com/t/font_1973738_jf5ishinnam.ttf?t=1625716248005') format('truetype');
 }
 
 .iconfont {
